--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <ol>
   <li><a href="https://docs.google.com/document/d/15snbrjlwUYmwj4voSA_33qqtMxHrYXKlhnElGK1dPC0/edit?usp=sharing">Stats 290</a>: Statistics Seminar Series</li>
   <li><a href="141B/index.html">Stats 141B</a>: Data & Web Technologies for Data Analysis</li>
-  <li><a href="208/index.html">Stats 208</a>: Machine Learning</li>
+  <li><a href="https://github.com/jsharpna/DavisSML/">Stats 208</a>: Statistical Machine Learning</li>
 </ol>
 
 <h3>Students</h3>
