--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
   <li>Starting your data science portfolio: <a href="141B/workflow.html">your workflow</a>, <a href="141B/git_instructions.html">git and GitHub</a></li>
   <li>Massive list of <a href="https://github.com/caesar0301/awesome-public-datasets">public datasets</a></li>
   <li>List of <a href="https://github.com/jupyter/jupyter/wiki/A-gallery-of-interesting-Jupyter-Notebooks">jupyter notebook projects</a></li>
-  <li><a href="https://guides.github.com/pdfs/markdown-cheatsheet-online.pdf">Markdown cheetsheet</a></li>
-  <li><a href="http://reu.dimacs.rutgers.edu/Symbols.pdf">LaTeX symbol cheetsheet</a></li>
+  <li><a href="https://guides.github.com/pdfs/markdown-cheatsheet-online.pdf">Markdown cheatsheet</a></li>
+  <li><a href="http://reu.dimacs.rutgers.edu/Symbols.pdf">LaTeX symbol cheatsheet</a></li>
   <li><a href=""></a>
 </ol>
   
