--- a/index.html
+++ b/index.html
@@ -96,6 +96,8 @@
 
 <h3>Resources</h3>
 
+<h3>DSI Workshop on Classification: <a href="https://github.com/jsharpna/DavisSML/tree/master/lectures/classify">Github Repo</a></h3>
+
 <ol>
   <li>Starting your data science portfolio: <a href="141B/workflow.html">your workflow</a>, <a href="141B/git_instructions.html">git and GitHub</a></li>
   <li>Massive list of <a href="https://github.com/caesar0301/awesome-public-datasets">public datasets</a></li>
