--- a/141B/index.html
+++ b/141B/index.html
@@ -40,20 +40,20 @@
 <h2>Syllabus</h2>
 <table>
   <tr><th>Lesson</th><th>Technology</th><th>Principles</th></tr>
-  <tr><td><a href="workflow.html">1: Data science workflow</a></td><td>Text editors, ipython, Jupyter</td><td>Programming basics, data science presentation</td></tr>
-  <tr><td><a href="git_instructions.html">2: Collaborating with git</a></td><td>git, command line</td><td>Versioning systems</td>
-  <tr><td><a href="pythonbasics.html">3: Python basics</a></td><td>strings, numbers, lists, dictionaries, looping, def</td><td>Sequential programming, variable scope, modular code</td>
-  <tr><td><a href="pythonadvanced.html">4: More Python</a></td><td>built-in functions, dictionaries, iterables, pythonic programming</td><td>object-oriented programming, data structures</td>
-  <tr><td><a href="matrices.html">5: Matrices in python</a></td><td>numpy, array</td><td>Vectorization</td></tr>
-  <tr><td><a href="readingdata.html">6: Reading data</a></td><td>open, csv, pandas</td><td>Data latency, processing data in batches</td></tr>
-  <tr><td><a href="matplotlib.html">7: Plotting basics</a></td><td>matplotlib</td><td>Plotting sense</td></tr>
-  <tr><td><a href="datawrangling.html">8: Data wrangling</a></td><td>pandas, DataFrame, pandas plotting</td><td>Slicing, thinking like Pandas</td></tr>
-  <tr><td><a href="datawrangling2.html">9: Data wrangling 2</a></td><td>indexing, groupby, join</td><td>Indexing, Merging and transforming data</td></tr>
-  <tr><td><a href="api.html">10: Web data</a></td><td>api, request, json</td><td>Internet basics, data aquisition</td></tr>
-  <tr><td><a href="learningtext.html">11: Learning from Text</a></td><td>nltk, scikit-learn, tokenization</td><td>From text to numbers, n-grams</td></tr>
-  <tr><td><a href="parsinghtml.html">12: Processing web data</a></td><td>html, xml, beautifulsoup</td><td>Hypertext languages, structured data</td></tr>
-  <tr><td><a href="sql.html">13: Databases</a></td><td>sqlalchemy, query</td><td>Database systems</td></tr>
-  <tr><td><a href="mapping.html">14: Geographical data</a></td><td>basemap, patches</td><td>GIS data, map projections</td></tr>
+  <tr><td><a href="https://github.com/jsharpna/DataTech/notebooks/Lesson_1_Workflow.ipynb">1: Data science workflow</a></td><td>Text editors, ipython, Jupyter</td><td>Presenting data science</td></tr>
+  <tr><td><a href="">2: Collaborating with git, python basics</a></td><td>git, python syntax</td><td>Versioning systems</td>
+  <tr><td><a href="">3: Python basics</a></td><td>strings, numbers, lists, dictionaries, looping, def</td><td>Sequential programming, variable scope, modular code</td>
+  <tr><td><a href="">4: More Python</a></td><td>built-in functions, dictionaries, iterables, pythonic programming</td><td>object-oriented programming, data structures</td>
+  <tr><td><a href="">5: Matrices in python</a></td><td>numpy, array</td><td>Vectorization</td></tr>
+  <tr><td><a href="">6: Reading data</a></td><td>open, csv, pandas</td><td>Data latency, processing data in batches</td></tr>
+  <tr><td><a href="">7: Plotting basics</a></td><td>matplotlib</td><td>Plotting sense</td></tr>
+  <tr><td><a href="">8: Data wrangling</a></td><td>pandas, DataFrame, pandas plotting</td><td>Slicing, thinking like Pandas</td></tr>
+  <tr><td><a href="">9: Data wrangling 2</a></td><td>indexing, groupby, join</td><td>Indexing, Merging and transforming data</td></tr>
+  <tr><td><a href="">10: Web data</a></td><td>api, request, json</td><td>Internet basics, data aquisition</td></tr>
+  <tr><td><a href="">11: Learning from Text</a></td><td>nltk, scikit-learn, tokenization</td><td>From text to numbers, n-grams</td></tr>
+  <tr><td><a href="">12: Processing web data</a></td><td>html, xml, beautifulsoup</td><td>Hypertext languages, structured data</td></tr>
+  <tr><td><a href="">13: Databases</a></td><td>sqlalchemy, query</td><td>Database systems</td></tr>
+  <tr><td><a href="">14: Geographical data</a></td><td>basemap, patches</td><td>GIS data, map projections</td></tr>
   <tr><td>15: Data visualization</td><td>plotly, ggplot</td><td>Graphics grammar</td></tr>
   <tr><td>16: Interactive data visualization</td><td>javascript basics, D3</td><td>Server side/client side processing, embedded script</td></tr>
 </table>
