--- a/141B/index.html
+++ b/141B/index.html
@@ -37,25 +37,47 @@
 	Because statistical tools, data types, and computational frameworks are constantly shifting, we will emphasize the ability to parse and understand the foundations of data science, through the enumeration of principles, standards, and fundamentals.
       </p>
 
+      <h2>Rules of the Course</h2>
+      <p>
+	<ul>
+	  <li>All communications should be done on slack</li>
+	  <li>Scheduling questions (e.g. waitlist) should be directed to the undergrad program coordinator, Kim McMullen at kimcmullen@ucdavis.edu</li>
+	  <li>Be respectful: to your colleagues, your TAs, your Prof, and yourself!</li>
+	</ul>
+      </p>
+
+      
 <h2>Syllabus</h2>
 <table>
-  <tr><th>Lesson</th><th>Technology</th><th>Principles</th></tr>
-  <tr><td><a href="https://github.com/jsharpna/DataTech/blob/master/notebooks/Lesson_1_Workflow.ipynb">1: Data science workflow</a></td><td>Text editors, ipython, Jupyter</td><td>Presenting data science</td></tr>
-  <tr><td><a href="">2: Collaborating with git, python basics</a></td><td>git, python syntax</td><td>Versioning systems</td>
-  <tr><td><a href="">3: Python basics</a></td><td>strings, numbers, lists, dictionaries, looping, def</td><td>Sequential programming, variable scope, modular code</td>
-  <tr><td><a href="">4: More Python</a></td><td>built-in functions, dictionaries, iterables, pythonic programming</td><td>object-oriented programming, data structures</td>
-  <tr><td><a href="">5: Matrices in python</a></td><td>numpy, array</td><td>Vectorization</td></tr>
-  <tr><td><a href="">6: Reading data</a></td><td>open, csv, pandas</td><td>Data latency, processing data in batches</td></tr>
-  <tr><td><a href="">7: Plotting basics</a></td><td>matplotlib</td><td>Plotting sense</td></tr>
-  <tr><td><a href="">8: Data wrangling</a></td><td>pandas, DataFrame, pandas plotting</td><td>Slicing, thinking like Pandas</td></tr>
-  <tr><td><a href="">9: Data wrangling 2</a></td><td>indexing, groupby, join</td><td>Indexing, Merging and transforming data</td></tr>
-  <tr><td><a href="">10: Web data</a></td><td>api, request, json</td><td>Internet basics, data aquisition</td></tr>
-  <tr><td><a href="">11: Learning from Text</a></td><td>nltk, scikit-learn, tokenization</td><td>From text to numbers, n-grams</td></tr>
-  <tr><td><a href="">12: Processing web data</a></td><td>html, xml, beautifulsoup</td><td>Hypertext languages, structured data</td></tr>
-  <tr><td><a href="">13: Databases</a></td><td>sqlalchemy, query</td><td>Database systems</td></tr>
-  <tr><td><a href="">14: Geographical data</a></td><td>basemap, patches</td><td>GIS data, map projections</td></tr>
-  <tr><td>15: Data visualization</td><td>plotly, ggplot</td><td>Graphics grammar</td></tr>
-  <tr><td>16: Interactive data visualization</td><td>javascript basics, D3</td><td>Server side/client side processing, embedded script</td></tr>
+  <tr><th>&nbsp;&nbsp;Date&nbsp;&nbsp;</th><th>Lesson: link to reading</th><th>Technology &amp; Principles</th></tr>
+  <tr><td>M 1-8</td><td>Introduction to Data Science</td><td></td></tr>
+  <tr><td>W 1-10</td><td><a href="https://github.com/jsharpna/DataTech/blob/master/notebooks/Lesson_1_Workflow.ipynb">Data science workflow</a></td><td>Text editors, ipython, Jupyter</td></tr>
+  <tr><td>F 1-12</td><td>Collaborating with git, python basics</td><td>git, Versioning systems</td>
+  <tr><td>W 1-17</td><td>Python basics</td><td>Sequential programming, variable scope, modular code</td>
+  <tr><td>F 1-19</td><td>More Python</td><td>object-oriented programming, data structures, pythonic programming</td>
+  <tr><td>M 1-22</td><td>Matrices in python</td><td>numpy, Vectorization</td></tr>
+  <tr><td>W 1-24</td><td>Reading data</td><td>pandas, processing data in batches</td></tr>
+  <tr><td>F 1-26</td><td>Plotting basics</td><td>matplotlib, Plotting sense</td></tr>
+  <tr><td>M 1-29</td><td>Data wrangling I</td><td>pandas, Missing data</td></tr>
+  <tr><td>W 1-31</td><td>Data wrangling II</td><td>Indexing, merging and transforming data</td></tr>
+  <tr><td>F 2-2</td><td>Intro to Machine Learning I</td><td>sklearn, basic classification tools</td></tr>
+  <tr><td>M 2-5</td><td>Intro to Machine Learning II</td><td>evaluating performance and overfitting</td></tr>
+  <tr><td>W 2-7</td><td>Intro to Machine Learning III</td><td>features and similarities</td></tr>
+  <tr><td>F 2-9</td><td>Web data</td><td>request, Internet basics, data aquisition</td></tr>
+  <tr><td>M 2-12</td><td>Learning from Text</td><td>nltk, From text to numbers, n-grams</td></tr>
+  <tr><td>W 2-14</td><td>Databases I</td><td>sqlalchemy, Database systems</td></tr>
+  <tr><td>F 2-16</td><td>Processing web data</td><td>beautifulsoup, Structured data</td></tr>  
+  <tr><td>W 2-21</td><td>TA day I<td>Group work and TA presentations</td></tr>
+  <tr><td>F 2-23</td><td>TA day II<td>Group work and TA presentations</td></tr>
+  <tr><td>M 2-26</td><td>Databases II</td><td>sqlalchemy, Relational databases</td></tr>
+  <tr><td>W 2-28</td><td>Geographical data</td><td>basemap, GIS data, map projections</td></tr>
+  <tr><td>F 3-2</td><td>Interactive data visualization</td><td>D3, principles of interactivity</td></tr>
+  <tr><td>M 3-5</td><td>Group presentations</td><td></td></tr>
+  <tr><td>W 3-7</td><td>Group presentations</td><td></td></tr>
+  <tr><td>F 3-9</td><td>Group presentations</td><td></td></tr>
+  <tr><td>M 3-12</td><td>Group presentations</td><td></td></tr>
+  <tr><td>W 3-14</td><td>Group presentations</td><td></td></tr>
+  <tr><td>M 3-16</td><td>Group presentations</td><td></td></tr>
 </table>
 
       <footer class="site-footer">
