--- a/141B/index.html
+++ b/141B/index.html
@@ -50,9 +50,9 @@
 <h2>Syllabus</h2>
 <table>
   <tr><th>&nbsp;&nbsp;Date&nbsp;&nbsp;</th><th>Lesson: link to reading</th><th>Technology &amp; Principles</th></tr>
-  <tr><td>M 1-8</td><td>Introduction to Data Science</td><td></td></tr>
-  <tr><td>W 1-10</td><td><a href="https://github.com/jsharpna/DataTech/blob/master/notebooks/Lesson_1_Workflow.ipynb">Data science workflow</a></td><td>Text editors, ipython, Jupyter</td></tr>
-  <tr><td>F 1-12</td><td>Collaborating with git, python basics</td><td>git, Versioning systems</td>
+  <tr><td>M 1-8</td><td>Introduction to Data Science (<a href="https://docs.google.com/presentation/d/1En0nL6dKiJbiJRA_nuna-Uo0ZFlB2dfI6Jmi9fhfjoI/edit?usp=sharing">slides</a>)</td><td></td></tr>
+  <tr><td>W 1-10</td><td><a href="https://github.com/jsharpna/DataTech/blob/master/notebooks/Lesson_1_Workflow.ipynb">Data science workflow</a> (<a href="https://docs.google.com/presentation/d/1Z-t_N-nPyFxaAvxWPGnoxKbFYnIMRtl0jmmw_1eJh2Y/edit?usp=sharinghttps://docs.google.com/presentation/d/1Z-t_N-nPyFxaAvxWPGnoxKbFYnIMRtl0jmmw_1eJh2Y/edit?usp=sharing">slides</a>)</td><td>Text editors, ipython, Jupyter</td></tr>
+  <tr><td>F 1-12</td><td><a href="https://github.com/jsharpna/DataTech/blob/master/notebooks/Lesson_2_Workflow2.ipynb">Collaborating with git</a>, <a href="https://github.com/jsharpna/DataTech/blob/master/notebooks/Lesson_2_Scrabble.ipynb">python basics: scrabble example</a></td><td>git, Versioning systems</td>
   <tr><td>W 1-17</td><td>Python basics</td><td>Sequential programming, variable scope, modular code</td>
   <tr><td>F 1-19</td><td>More Python</td><td>object-oriented programming, data structures, pythonic programming</td>
   <tr><td>M 1-22</td><td>Matrices in python</td><td>numpy, Vectorization</td></tr>
