--- a/141B/index.html
+++ b/141B/index.html
@@ -37,10 +37,11 @@
 	Because statistical tools, data types, and computational frameworks are constantly shifting, we will emphasize the ability to parse and understand the foundations of data science, through the enumeration of principles, standards, and fundamentals.
       </p>
 
-      <h2>Rules of the Course</h2>
+      <h2>The Course: 2018</h2>
       <p>
 	<ul>
-	  <li>All communications should be done on slack</li>
+	  <li>All communications should be done on slack: you should have received an email inviting you to this, email me if not</li>
+	  <li>There will be 6 assignments (you will get a link on slack when they are assigned) and one final project (homeworks combined are 50% of the grade, and the final is also 50%).
 	  <li>Scheduling questions (e.g. waitlist) should be directed to the undergrad program coordinator, Kim McMullen at kimcmullen@ucdavis.edu</li>
 	  <li>Be respectful: to your colleagues, your TAs, your Prof, and yourself!</li>
 	</ul>
@@ -49,10 +50,10 @@
       
 <h2>Syllabus</h2>
 <table>
-  <tr><th>&nbsp;&nbsp;Date&nbsp;&nbsp;</th><th>Lesson: link to reading</th><th>Technology &amp; Principles</th></tr>
+  <tr><th>&nbsp;&nbsp;Date&nbsp;&nbsp;</th><th>Material (required reading, slides, notebooks)</th><th>Technology &amp; Principles</th></tr>
   <tr><td>M 1-8</td><td>Introduction to Data Science (<a href="https://docs.google.com/presentation/d/1En0nL6dKiJbiJRA_nuna-Uo0ZFlB2dfI6Jmi9fhfjoI/edit?usp=sharing">slides</a>)</td><td></td></tr>
-  <tr><td>W 1-10</td><td><a href="https://github.com/jsharpna/DataTech/blob/master/notebooks/Lesson_1_Workflow.ipynb">Data science workflow</a> (<a href="https://docs.google.com/presentation/d/1Z-t_N-nPyFxaAvxWPGnoxKbFYnIMRtl0jmmw_1eJh2Y/edit?usp=sharinghttps://docs.google.com/presentation/d/1Z-t_N-nPyFxaAvxWPGnoxKbFYnIMRtl0jmmw_1eJh2Y/edit?usp=sharing">slides</a>)</td><td>Text editors, ipython, Jupyter</td></tr>
-  <tr><td>F 1-12</td><td><a href="https://github.com/jsharpna/DataTech/blob/master/notebooks/Lesson_2_Workflow2.ipynb">Collaborating with git</a>, <a href="https://github.com/jsharpna/DataTech/blob/master/notebooks/Lesson_2_Scrabble.ipynb">python basics: scrabble example</a></td><td>git, Versioning systems</td>
+  <tr><td>W 1-10</td><td><a href="https://github.com/jsharpna/DataTech/blob/master/notebooks/Lesson_1_Workflow.ipynb">Required reading</a>, <a href="https://docs.google.com/presentation/d/1Z-t_N-nPyFxaAvxWPGnoxKbFYnIMRtl0jmmw_1eJh2Y/edit?usp=sharinghttps://docs.google.com/presentation/d/1Z-t_N-nPyFxaAvxWPGnoxKbFYnIMRtl0jmmw_1eJh2Y/edit?usp=sharing">slides</a></td><td>Data science workflow, ipython, Jupyter</td></tr>
+  <tr><td>F 1-12</td><td><a href="https://github.com/jsharpna/DataTech/blob/master/notebooks/Lesson_2_Workflow2.ipynb">Required reading</a>, <a href="https://github.com/jsharpna/DataTech/blob/master/notebooks/Lesson_2_Scrabble.ipynb">scrabble notebook</a></td><td>git, Versioning systems, python basics</td>
   <tr><td>W 1-17</td><td>Python basics</td><td>Sequential programming, variable scope, modular code</td>
   <tr><td>F 1-19</td><td>More Python</td><td>object-oriented programming, data structures, pythonic programming</td>
   <tr><td>M 1-22</td><td>Matrices in python</td><td>numpy, Vectorization</td></tr>
