--- a/141B/index.html
+++ b/141B/index.html
@@ -47,11 +47,20 @@
 	</ul>
       </p>
 
+
+      <h2>Recommended Reading</h2>
+      <p>
+	<ul>
+	  <li><a href="https://www.amazon.com/Python-Probability-Statistics-Machine-Learning/dp/3319307150/ref=sr_1_1?s=amazon-devices&ie=UTF8&qid=1515366647&sr=8-1&keywords=python+statistics+probability">Python for Probability, Statistics, and Machine Learning by Jose Unpingco</a></li>
+	  <li><a href="https://www.amazon.com/Python-Data-Analysis-Wrangling-IPython/dp/1491957662/ref=pd_bxgy_14_img_3?_encoding=UTF8&pd_rd_i=1491957662&pd_rd_r=TSY4W87T9B3NCK8Y6QYQ&pd_rd_w=7P0Vw&pd_rd_wg=1hfM1&psc=1&refRID=TSY4W87T9B3NCK8Y6QYQ">Python for Data Analysis: Data Wrangling with Pandas, NumPy, and IPython (2nd Edition) by Wes McKinney</a></li>
+	</ul>
+      </p>
+      
       
 <h2>Syllabus</h2>
 <table>
   <tr><th>&nbsp;&nbsp;Date&nbsp;&nbsp;</th><th>Material (required reading, slides, notebooks)</th><th>Technology &amp; Principles</th></tr>
-  <tr><td>M 1-8</td><td>Introduction to Data Science (<a href="https://docs.google.com/presentation/d/1En0nL6dKiJbiJRA_nuna-Uo0ZFlB2dfI6Jmi9fhfjoI/edit?usp=sharing">slides</a>)</td><td></td></tr>
+  <tr><td>M 1-8</td><td><a href="https://docs.google.com/presentation/d/1En0nL6dKiJbiJRA_nuna-Uo0ZFlB2dfI6Jmi9fhfjoI/edit?usp=sharing">Slides</a></td><td>Intro to Data Science</td></tr>
   <tr><td>W 1-10</td><td><a href="https://github.com/jsharpna/DataTech/blob/master/notebooks/Lesson_1_Workflow.ipynb">Required reading</a>, <a href="https://docs.google.com/presentation/d/1Z-t_N-nPyFxaAvxWPGnoxKbFYnIMRtl0jmmw_1eJh2Y/edit?usp=sharinghttps://docs.google.com/presentation/d/1Z-t_N-nPyFxaAvxWPGnoxKbFYnIMRtl0jmmw_1eJh2Y/edit?usp=sharing">slides</a></td><td>Data science workflow, ipython, Jupyter</td></tr>
   <tr><td>F 1-12</td><td><a href="https://github.com/jsharpna/DataTech/blob/master/notebooks/Lesson_2_Workflow2.ipynb">Required reading</a>, <a href="https://github.com/jsharpna/DataTech/blob/master/notebooks/Lesson_2_Scrabble.ipynb">scrabble notebook</a></td><td>git, Versioning systems, python basics</td>
   <tr><td>W 1-17</td><td>Python basics</td><td>Sequential programming, variable scope, modular code</td>
