--- a/141B/index.html
+++ b/141B/index.html
@@ -40,10 +40,11 @@
       <h2>The Course: 2018</h2>
       <p>
 	<ul>
-	  <li>All communications should be done on slack: you should have received an email inviting you to this, email me if not</li>
-	  <li>There will be 6 assignments (you will get a link on slack when they are assigned) and one final project (homeworks combined are 50% of the grade, and the final is also 50%).
-	  <li>Scheduling questions (e.g. waitlist) should be directed to the undergrad program coordinator, Kim McMullen at kimcmullen@ucdavis.edu</li>
-	  <li>Be respectful: to your colleagues, your TAs, your Prof, and yourself!</li>
+	  <li>1. All communications should be done on slack: you should have received an email inviting you to this, email me if not</li>
+	  <li>2. There will be 6 assignments (you will get a link on slack when they are assigned) and one final project (homeworks combined are 50% of the grade, and the final is also 50%).</li>
+	  <li>3. You should do the assignments on your own, but you can get advice from others in the class.  You should never copy code from someone else in the course on the homeworks.</li>
+	  <li>4. Scheduling questions (e.g. waitlist) should be directed to the undergrad program coordinator, Kim McMullen at kimcmullen@ucdavis.edu</li>
+	  <li>5. Be respectful: to your colleagues, your TAs, your Prof, and yourself!</li>
 	</ul>
       </p>
 
@@ -56,7 +57,26 @@
 	</ul>
       </p>
       
-      
+
+      <h2>Final Project</h2>
+      <p> The final project is 50% of the grade for the course, and it should demonstrate a large proportion of what you have learned from the course.  If you do not display proficiency in the key technologies that we have gone over, then you will not receive a good grade.  This includes
+	<ul>
+	  <li>- extracting data through web scraping, api calls, and parsing structured text or other unorthodox data types</li>
+	  <li>- a thorough exploratory data analysis involving visualization, unsupervised learning, and descriptive statistics
+	  <li>- thoughtful data visualization with matplotlib, ggplot, seaborn, basemap, etc. including for high-dimensional data, network data, geodata</li>
+	  <li>- appropriate use of statistical and machine learning tools, involving feature construction, transformations, and proper evaluation</li>
+	  <li>- good communication of your findings and a good grasp of statistical thinking</li>
+	</ul>
+	Some of the general rules and things to think about are...
+	<ol>
+	  <li>1. You can work individually or in groups of 1-4 people. Larger groups will be graded more harshly than smaller groups.</li>
+	  <li>2. As a group you should begin with a certain curiosity, for example, in my lecture 'What happened in Ohio?' I looked at the presidential election in OH.  Then we processed the data, visualized it, and asked specific questions.
+	  <li>3. There is an in class group presentation in the last two weeks of the course, and a final written portion due TBD (near or during finals week).  </li>
+	  <li>4. Your presentation and final project will be separately factored into your grade.  Because many of you will be presenting weeks before the deadline for the written portion you are encouraged to continue working on your project after you give the presentation.</li>
+	  <li>5. As a group you will submit code and jupyter notebooks in addition to a website for the project.  You will receive a link on slack to form a group repository toward the beginning of the course.</li>
+
+	</ol>
+	
 <h2>Syllabus</h2>
 <table>
   <tr><th>&nbsp;&nbsp;Date&nbsp;&nbsp;</th><th>Material (required reading, slides, notebooks)</th><th>Technology &amp; Principles</th></tr>
