--- a/141B/index.html
+++ b/141B/index.html
@@ -44,7 +44,8 @@
 	  <li>2. There will be 6 assignments (you will get a link on slack when they are assigned) and one final project (homeworks combined are 50% of the grade, and the final is also 50%).</li>
 	  <li>3. You should do the assignments on your own, but you can get advice from others in the class.  You should never copy code from someone else in the course on the homeworks.</li>
 	  <li>4. Scheduling questions (e.g. waitlist) should be directed to the undergrad program coordinator, Kim McMullen at kimcmullen@ucdavis.edu</li>
-	  <li>5. Be respectful: to your colleagues, your TAs, your Prof, and yourself!</li>
+	  <li>5. Office hours are: Wed. and Thurs. 11am-12pm (Prof. James) and Thurs. 12-2pm (TA Gary) in Academic Surge 2142, starting on Thurs. 11 Jan.</li>
+	  <li>6. Be respectful: to your colleagues, your TAs, your Prof, and yourself!</li>
 	</ul>
       </p>
 
