--- a/141B/index.html
+++ b/141B/index.html
@@ -55,6 +55,7 @@
 	<ul>
 	  <li><a href="https://www.amazon.com/Python-Probability-Statistics-Machine-Learning/dp/3319307150/ref=sr_1_1?s=amazon-devices&ie=UTF8&qid=1515366647&sr=8-1&keywords=python+statistics+probability">Python for Probability, Statistics, and Machine Learning by Jose Unpingco</a></li>
 	  <li><a href="https://www.amazon.com/Python-Data-Analysis-Wrangling-IPython/dp/1491957662/ref=pd_bxgy_14_img_3?_encoding=UTF8&pd_rd_i=1491957662&pd_rd_r=TSY4W87T9B3NCK8Y6QYQ&pd_rd_w=7P0Vw&pd_rd_wg=1hfM1&psc=1&refRID=TSY4W87T9B3NCK8Y6QYQ">Python for Data Analysis: Data Wrangling with Pandas, NumPy, and IPython (2nd Edition) by Wes McKinney</a></li>
+	  <li><a href="http://shop.oreilly.com/product/0636920037057.do">Data Visualization with Python and JavaScript by Kyran Dale</a></li>
 	</ul>
       </p>
       
