--- a/141B/index.html
+++ b/141B/index.html
@@ -86,7 +86,7 @@
   <tr><td>W 1-10</td><td><a href="https://github.com/jsharpna/DataTech/blob/master/notebooks/Lesson_1_Workflow.ipynb">Required reading</a>, <a href="https://docs.google.com/presentation/d/1Z-t_N-nPyFxaAvxWPGnoxKbFYnIMRtl0jmmw_1eJh2Y/edit?usp=sharinghttps://docs.google.com/presentation/d/1Z-t_N-nPyFxaAvxWPGnoxKbFYnIMRtl0jmmw_1eJh2Y/edit?usp=sharing">slides</a></td><td>Data science workflow, ipython, Jupyter</td></tr>
   <tr><td>F 1-12</td><td><a href="https://github.com/jsharpna/DataTech/blob/master/notebooks/Lesson_2_Workflow2.ipynb">Required reading</a>, <a href="https://github.com/jsharpna/DataTech/blob/master/notebooks/Lesson_2_Scrabble.ipynb">scrabble notebook</a>, <a href="https://docs.google.com/presentation/d/13lcIHHMSqgrRk5Wcew7HkpCPuH5qQfPv2DraHm5i2xw/edit?usp=sharing">slides</a></td><td>git, Versioning systems, python basics</td>
   <tr><td>W 1-17</td><td><a href="https://github.com/jsharpna/DataTech/blob/master/notebooks/Lesson_3_Python_Basics.ipynb">Required reading</a>, <a href="https://github.com/jsharpna/DataTech/blob/master/notebooks/Lesson_3_Scrabble.ipynb">notebook</a></td><td>Python basics, variable scope, modular code</td>
-  <tr><td>F 1-19</td><td>More Python</td><td>object-oriented programming, data structures, pythonic programming</td>
+  <tr><td>F 1-19</td><td><a href="https://github.com/jsharpna/DataTech/blob/master/notebooks/Lesson_4_Python_Advanced.ipynb">Required reading</a></td><td>immutable/mutable, data structures, pythonic programming</td>
   <tr><td>M 1-22</td><td>Matrices in python</td><td>numpy, Vectorization</td></tr>
   <tr><td>W 1-24</td><td>Reading data</td><td>pandas, processing data in batches</td></tr>
   <tr><td>F 1-26</td><td>Plotting basics</td><td>matplotlib, Plotting sense</td></tr>
