--- a/141B/index.html
+++ b/141B/index.html
@@ -88,7 +88,7 @@
   <tr><td>W 1-17</td><td><a href="https://github.com/jsharpna/DataTech/blob/master/notebooks/Lesson_3_Python_Basics.ipynb">Required reading</a>, <a href="https://github.com/jsharpna/DataTech/blob/master/notebooks/Lesson_3_Scrabble.ipynb">notebook</a></td><td>Python basics, variable scope, modular code</td>
   <tr><td>F 1-19</td><td><a href="https://github.com/jsharpna/DataTech/blob/master/notebooks/Lesson_4_Python_Advanced.ipynb">Required reading</a>, <a href="https://github.com/jsharpna/DataTech/blob/master/notebooks/Lesson_4_lab.ipynb">lab</a></td><td>immutable/mutable, data structures, pythonic programming</td>
   <tr><td>M 1-22</td><td><a href="https://github.com/jsharpna/DataTech/blob/master/notebooks/Lesson_5_Numpy.ipynb">Required reading</a>, <a href="https://github.com/jsharpna/DataTech/blob/master/notebooks/Lesson_5_Notebook.ipynb">notebook</a></td><td>Matrices, numpy, Vectorization</td></tr>
-  <tr><td>W 1-24</td><td>Reading data</td><td>pandas, processing data in batches</td></tr>
+  <tr><td>W 1-24</td><td><a href="https://github.com/jsharpna/DataTech/blob/master/notebooks/Lesson_6_Reading_Data.ipynb">Required reading</a>, <a href="https://github.com/jsharpna/DataTech/blob/master/notebooks/Lesson_6_Notebook.ipynb">notebook</a></td><td>reading data, pandas, processing data in batches</td></tr>
   <tr><td>F 1-26</td><td>Plotting basics</td><td>matplotlib, Plotting sense</td></tr>
   <tr><td>M 1-29</td><td>Data wrangling I</td><td>pandas, Missing data</td></tr>
   <tr><td>W 1-31</td><td>Data wrangling II</td><td>Indexing, merging and transforming data</td></tr>
