--- a/141B/index.html
+++ b/141B/index.html
@@ -89,7 +89,7 @@
   <tr><td>F 1-19</td><td><a href="https://github.com/jsharpna/DataTech/blob/master/notebooks/Lesson_4_Python_Advanced.ipynb">Required reading</a>, <a href="https://github.com/jsharpna/DataTech/blob/master/notebooks/Lesson_4_lab.ipynb">lab</a></td><td>immutable/mutable, data structures, pythonic programming</td>
   <tr><td>M 1-22</td><td><a href="https://github.com/jsharpna/DataTech/blob/master/notebooks/Lesson_5_Numpy.ipynb">Required reading</a>, <a href="https://github.com/jsharpna/DataTech/blob/master/notebooks/Lesson_5_Notebook.ipynb">notebook</a></td><td>Matrices, numpy, Vectorization</td></tr>
   <tr><td>W 1-24</td><td><a href="https://github.com/jsharpna/DataTech/blob/master/notebooks/Lesson_6_Reading_Data.ipynb">Required reading</a>, <a href="https://github.com/jsharpna/DataTech/blob/master/notebooks/Lesson_6_Notebook.ipynb">notebook</a></td><td>reading data, pandas, processing data in batches</td></tr>
-  <tr><td>F 1-26</td><td>Plotting basics</td><td>matplotlib, Plotting sense</td></tr>
+  <tr><td>F 1-26</td><td><a href="https://github.com/jsharpna/DataTech/blob/master/notebooks/Lesson_7_Plotting_Basics.ipynb">Required reading</a></td><td>matplotlib, Plotting sense</td></tr>
   <tr><td>M 1-29</td><td>Data wrangling I</td><td>pandas, Missing data</td></tr>
   <tr><td>W 1-31</td><td>Data wrangling II</td><td>Indexing, merging and transforming data</td></tr>
   <tr><td>F 2-2</td><td>Intro to Machine Learning I</td><td>sklearn, basic classification tools</td></tr>
