--- a/141B/index.html
+++ b/141B/index.html
@@ -90,8 +90,8 @@
   <tr><td>M 1-22</td><td><a href="https://github.com/jsharpna/DataTech/blob/master/notebooks/Lesson_5_Numpy.ipynb">Required reading</a>, <a href="https://github.com/jsharpna/DataTech/blob/master/notebooks/Lesson_5_Notebook.ipynb">notebook</a></td><td>Matrices, numpy, Vectorization</td></tr>
   <tr><td>W 1-24</td><td><a href="https://github.com/jsharpna/DataTech/blob/master/notebooks/Lesson_6_Reading_Data.ipynb">Required reading</a>, <a href="https://github.com/jsharpna/DataTech/blob/master/notebooks/Lesson_6_Notebook.ipynb">notebook</a></td><td>reading data, pandas, processing data in batches</td></tr>
   <tr><td>F 1-26</td><td><a href="https://github.com/jsharpna/DataTech/blob/master/notebooks/Lesson_7_Plotting_Basics.ipynb">Required reading</a>, <a href="https://github.com/jsharpna/DataTech/blob/master/notebooks/Lesson_7_Notebook.ipynb">notebook</a></td><td>matplotlib, Plotting sense</td></tr>
-  <tr><td>M 1-29</td><td>Data wrangling I</td><td>pandas, Missing data</td></tr>
-  <tr><td>W 1-31</td><td>Data wrangling II</td><td>Indexing, merging and transforming data</td></tr>
+  <tr><td>M 1-29</td><td><a href="https://github.com/jsharpna/DataTech/blob/master/notebooks/Lesson_8_Pandas.ipynb">Required reading</a></td><td>Data Wrangling, pandas, Missing data</td></tr>
+  <tr><td>W 1-31</td><td><a href="https://github.com/jsharpna/DataTech/blob/master/notebooks/Lesson_9_Pandas_2.ipynb">Required reading</a></td><td>Indexing, merging and transforming data</td></tr>
   <tr><td>F 2-2</td><td>Intro to Machine Learning I</td><td>sklearn, basic classification tools</td></tr>
   <tr><td>M 2-5</td><td>Intro to Machine Learning II</td><td>evaluating performance and overfitting</td></tr>
   <tr><td>W 2-7</td><td>Intro to Machine Learning III</td><td>features and similarities</td></tr>
