--- a/141B/index.html
+++ b/141B/index.html
@@ -92,9 +92,9 @@
   <tr><td>F 1-26</td><td><a href="https://github.com/jsharpna/DataTech/blob/master/notebooks/Lesson_7_Plotting_Basics.ipynb">Required reading</a>, <a href="https://github.com/jsharpna/DataTech/blob/master/notebooks/Lesson_7_Notebook.ipynb">notebook</a></td><td>matplotlib, Plotting sense</td></tr>
   <tr><td>M 1-29</td><td><a href="https://github.com/jsharpna/DataTech/blob/master/notebooks/Lesson_8_Pandas.ipynb">Required reading</a>,<a href="https://github.com/jsharpna/DataTech/blob/master/notebooks/Lesson_8_Notebook.ipynb"> notebook</a></td><td>Data Wrangling, pandas, Missing data</td></tr>
   <tr><td>W 1-31</td><td><a href="https://github.com/jsharpna/DataTech/blob/master/notebooks/Lesson_9_Pandas_2.ipynb">Required reading</a></td><td>Indexing, merging and transforming data</td></tr>
-  <tr><td>F 2-2</td><td>Intro to Machine Learning I</td><td>sklearn, basic classification tools</td></tr>
-  <tr><td>M 2-5</td><td>Intro to Machine Learning II</td><td>evaluating performance and overfitting</td></tr>
-  <tr><td>W 2-7</td><td>Intro to Machine Learning III</td><td>features and similarities</td></tr>
+  <tr><td>F 2-2</td><td><a href="https://github.com/jsharpna/DataTech/blob/master/notebooks/Lesson_10_Notebook.ipynb">Notebook</a></td><td>A data munging and analysis example: OH 2016</td></tr>
+  <tr><td>M 2-5</td><td>Intro to Machine Learning I</td><td>evaluating performance and overfitting, sklearn, classification</td></tr>
+  <tr><td>W 2-7</td><td>Intro to Machine Learning II</td><td>features and similarities</td></tr>
   <tr><td>F 2-9</td><td>Web data</td><td>request, Internet basics, data aquisition</td></tr>
   <tr><td>M 2-12</td><td>Learning from Text</td><td>nltk, From text to numbers, n-grams</td></tr>
   <tr><td>W 2-14</td><td>Databases I</td><td>sqlalchemy, Database systems</td></tr>
