--- a/141B/index.html
+++ b/141B/index.html
@@ -94,7 +94,7 @@
   <tr><td>W 1-31</td><td><a href="https://github.com/jsharpna/DataTech/blob/master/notebooks/Lesson_9_Pandas_2.ipynb">Required reading</a></td><td>Indexing, merging and transforming data</td></tr>
   <tr><td>F 2-2</td><td><a href="https://github.com/jsharpna/DataTech/blob/master/notebooks/Lesson_10_Notebook.ipynb">Notebook</a></td><td>A data munging and analysis example: OH 2016</td></tr>
   <tr><td>M 2-5</td><td><a href="https://github.com/jsharpna/DavisSML/blob/master/lectures/classify/README.md">Classification notes</a></td><td>Machine Learning, evaluating performance, sklearn, classification</td></tr>
-  <tr><td>W 2-7</td><td><a href="https://github.com/unpingco/Python-for-Probability-Statistics-and-Machine-Learning/blob/master/chapters/machine_learning/notebooks/learning_theory.ipynb">Reading from Unpincgo</a></td><td>Machine Learning, overfitting and model selection</td></tr>
+  <tr><td>W 2-7</td><td><a href="https://github.com/unpingco/Python-for-Probability-Statistics-and-Machine-Learning/blob/master/chapters/machine_learning/notebooks/learning_theory.ipynb">Reading from Unpingco</a></td><td>Machine Learning, overfitting and model selection</td></tr>
   <tr><td>F 2-9</td><td><a href="https://github.com/unpingco/Python-for-Probability-Statistics-and-Machine-Learning/blob/master/chapters/machine_learning/notebooks/logreg.ipynb">Reading from Unpingco</a></td><td>Machine Learning, logistic regression and SVMs</td></tr>
   <tr><td>M 2-12</td><td>Learning from Text</td><td>nltk, From text to numbers, n-grams</td></tr>
   <tr><td>W 2-14</td><td>Databases I</td><td>sqlalchemy, Database systems</td></tr>
