--- a/index.html
+++ b/index.html
@@ -34,6 +34,11 @@
 	</div>
       </div>
 
+      <h3>Current Presentations</h3>
+      <ol>
+	<li><a href="ITA2018detect.pdf">``Learning Patterns for Detection with Multiscale Scan Statistics'' ITA 2018</a></li>
+      </ol>
+      
 <h3>Teaching</h3>
 <ol>
   <li><a href="https://docs.google.com/document/d/15snbrjlwUYmwj4voSA_33qqtMxHrYXKlhnElGK1dPC0/edit?usp=sharing">Stats 290</a>: Statistics Seminar Series</li>
@@ -45,7 +50,7 @@
 <ol>
   <li>Liwei Wu, PhD Student</li>
   <li>Xiaoyue Li, PhD Student</li>
-  <li>Yujun Chen, Masters Student</li>
+  <li>Shitong Wei, PhD Student</li>
   <li>Andrew Chin, Undergraduate Student</li>
 </ol>
 
