--- a/index.html
+++ b/index.html
@@ -34,9 +34,10 @@
 	</div>
       </div>
 
-      <h3>Current Presentations</h3>
+      <h3>Recent Papers and Presentations</h3>
       <ol>
-	<li><a href="ITA2018detect.pdf">``Learning Patterns for Detection with Multiscale Scan Statistics'' ITA 2018</a></li>
+	<li><a href="https://arxiv.org/abs/1802.06054">``Learning Patterns for Detection with Multiscale Scan Statistics''</a> J. Sharpnack Jan. 2018</li>
+	<li><a href="research/ITA2018detect.pdf">``Learning Patterns for Detection with Multiscale Scan Statistics''</a> Presentation at ITA 2018</li>	
       </ol>
       
 <h3>Teaching</h3>
