--- a/141B/index.html
+++ b/141B/index.html
@@ -98,12 +98,12 @@
   <tr><td>F 2-9</td><td><a href="https://github.com/unpingco/Python-for-Probability-Statistics-and-Machine-Learning/blob/master/chapters/machine_learning/notebooks/logreg.ipynb">Reading from Unpingco</a><a href="https://github.com/jsharpna/DavisSML/blob/master/labs/lab1-soln.ipynb">, notebook</a></td><td>Machine Learning, logistic regression and SVMs</td></tr>
   <tr><td>M 2-12</td><td><a href="https://github.com/jsharpna/DataTech/blob/master/notebooks/Lesson_11_Text.ipynb">Reading, </a><a href="https://github.com/jsharpna/DataTech/blob/master/notebooks/Lesson_11_Notebook.ipynb">notebook</a></td><td>nltk, From text to numbers, n-grams</td></tr>
   <tr><td>W 2-14</td><td><a href="https://github.com/jsharpna/DataTech/blob/master/notebooks/Lesson_12_Web_Data.ipynb">Reading,</a> <a href="https://github.com/jsharpna/DataTech/blob/master/notebooks/Lesson_12_Pet_API.ipynb"> notebook</a></td><td>requests, APIs, JSON</td></tr>
-  <tr><td>F 2-16</td><td>Databases I</td><td>sqlalchemy, Database systems</td></tr>
+  <tr><td>F 2-16</td><td><a href="https://github.com/jsharpna/DataTech/blob/master/notebooks/Lesson_13_SQL.ipynb">Reading, </a><a href="https://github.com/jsharpna/DataTech/blob/master/notebooks/Lesson_13_Notebook.ipynb">notebook</a></td><td>Database systems, sql, sqlalchemy</td></tr>
   <tr><td>W 2-21</td><td>TA day I<td>Group work and TA presentations</td></tr>
   <tr><td>F 2-23</td><td>TA day II<td>Group work and TA presentations</td></tr>
-  <tr><td>M 2-26</td><td>Databases II</td><td>sqlalchemy, Relational databases</td></tr>
-  <tr><td>W 2-28</td><td>Geographical data</td><td>basemap, GIS data, map projections</td></tr>
-  <tr><td>F 3-2</td><td>Interactive data visualization</td><td>D3, principles of interactivity</td></tr>
+  <tr><td>M 2-26</td><td>Reading, notebook</td><td>HTML, DOM, Beautiful soup</td></tr>
+  <tr><td>W 2-28</td><td>Reading, notebook</td><td>Interactive visualization, mpld3</td></tr>
+  <tr><td>F 3-2</td><td>Reading, notebook</td><td>D3, fixing the choropleth map</td></tr>
   <tr><td>M 3-5</td><td>Group presentations</td><td></td></tr>
   <tr><td>W 3-7</td><td>Group presentations</td><td></td></tr>
   <tr><td>F 3-9</td><td>Group presentations</td><td></td></tr>
