--- a/141B/index.html
+++ b/141B/index.html
@@ -102,7 +102,7 @@
   <tr><td>W 2-21</td><td>TA day I<td>Group work and TA presentations</td></tr>
   <tr><td>F 2-23</td><td>TA day II<td>Group work and TA presentations</td></tr>
   <tr><td>M 2-26</td><td><a href="https://github.com/jsharpna/DataTech/blob/master/notebooks/Lesson_14_HTML.ipynb">Reading,</a> <a href="https://github.com/jsharpna/DataTech/blob/master/notebooks/Lesson_14_Notebook.ipynb">notebook</a></td><td>HTML, DOM, Beautiful soup</td></tr>
-  <tr><td>W 2-28</td><td>Reading, notebook</td><td>Interactive visualization, mpld3</td></tr>
+  <tr><td>W 2-28</td><td><a href="https://github.com/jsharpna/DataTech/blob/master/notebooks/Lesson_15_Interactive_Vis.ipynb">Notebook</a>, <a href="https://github.com/jsharpna/DataTech/blob/master/notebooks/mpld3_demo.ipynb">mpld3 demo</a></td><td>Interactive visualization, mpld3</td></tr>
   <tr><td>F 3-2</td><td>Reading, notebook</td><td>D3, fixing the choropleth map</td></tr>
   <tr><td>M 3-5</td><td>Group presentations</td><td></td></tr>
   <tr><td>W 3-7</td><td>Group presentations</td><td></td></tr>
