--- a/index.html
+++ b/index.html
@@ -36,8 +36,10 @@
 
       <h3>Recent Papers and Presentations</h3>
       <ol>
-	<li><a href="https://arxiv.org/abs/1802.06054">``Learning Patterns for Detection with Multiscale Scan Statistics''</a> J. Sharpnack Jan. 2018</li>
-	<li><a href="research/ITA2018detect.pdf">``Learning Patterns for Detection with Multiscale Scan Statistics''</a> Presentation at ITA 2018</li>	
+	<li><b>Learning Patterns for Detection with Multiscale Scan Statistics</b>, <i>J. Sharpnack</i>, Jan. 2018,
+	  (<a href="https://arxiv.org/abs/1802.06054">ArXiV preprint</a>, <a href="research/ITA2018detect.pdf">Presentation</a>)</li>
+	<li><b>Estimating Graphlet Statistics via Lifting</b>, <i>K. Paramonov, J. Sharpnack</i>, Jan. 2018,
+	  (<a href="https://arxiv.org/abs/1802.08736">ArXiV preprint</a>)</li>
       </ol>
       
 <h3>Teaching</h3>
