--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
 	<li><b>Estimating Graphlet Statistics via Lifting</b>, <i>K. Paramonov, J. Sharpnack</i>, Jan. 2018,
 	  (<a href="https://arxiv.org/abs/1802.08736">ArXiV preprint</a>)</li>
       </ol>
+
+<h3><a href="jsharpnaCV.pdf">My CV</a></h3>
       
 <h3>Teaching</h3>
 <ol>
