--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 	  (<a href="https://arxiv.org/abs/1802.08736">ArXiV preprint</a>)</li>
       </ol>
 
-<h3><a href="jsharpnaCV.pdf">My CV</a></h3><br><br>
+<h3><a href="jsharpnaCV.pdf">My CV</a></h3>
       
 <h3>Teaching</h3>
 <ol>
