--- a/research/scan.html
+++ b/research/scan.html
@@ -33,6 +33,12 @@
 
       
       <div class="pub">
+	<b>Learning Patterns for Detection with Multiscale Scan Statistics</b>
+	(<a href="https://arxiv.org/abs/1802.06054"><font color = "#0000FF">arXiv preprint</font></a><br>
+	J. Sharpnack, 2018
+	</div>
+
+      <div class="pub">
 	<b>Exact Asymptotics for the Scan Statistic and Fast Alternatives</b>
 	(<a href="http://arxiv.org/abs/1409.7127"><font color = "#0000FF">arXiv</font></a>, <a href="https://github.com/jsharpna/adascan">code on github</a><br>
 	J. Sharpnack and E. Arias-Castro<br>
