--- a/research/nonpara.html
+++ b/research/nonpara.html
@@ -30,10 +30,17 @@
 </div>
 </div>
 
+
       <div class="pub">
-	<b>Approximate Recovery in Changepoint Problems, from L2 Estimation Error Rates</b> (<a href="http://arxiv.org/abs/1606.06746"><font color = "#0000FF">arXiv</font></a>)<br>
+	<b>Higher-Order Total Variation Classes on Grids: Minimax Theory and Trend Filtering Methods</b> (<a href="https://papers.nips.cc/paper/7162-higher-order-total-variation-classes-on-grids-minimax-theory-and-trend-filtering-methods"><font color = "#0000FF">NIPS</font></a>)<br>
+	Veeranjaneyulu Sadhanala, Yu-Xiang Wang, James Sharpnack, Ryan J. Tibshirani<br>
+	Neural Information Processing Systems (NIPS), 2017.
+      </div>
+
+      <div class="pub">
+	<b>Approximate Recovery in Changepoint Problems, from L2 Estimation Error Rates</b> (<a href="http://arxiv.org/abs/1606.06746"><font color = "#0000FF">arXiv</font></a>, <a href="https://papers.nips.cc/paper/7264-a-sharp-error-analysis-for-the-fused-lasso-with-application-to-approximate-changepoint-screening">NIPS</a>)<br>
 	Kevin Lin, James Sharpnack, Alessandro Rinaldo, Ryan J. Tibshirani<br>
-	In Submission.
+	Neural Information Processing Systems (NIPS), 2017.
       </div>
 
       <div class="pub">
