--- a/research/graphsignal.html
+++ b/research/graphsignal.html
@@ -33,7 +33,7 @@
 <b>The DFS fused lasso: nearly optimal linear-time denoising over graphs and trees</b>
 (<a href="http://arxiv.org/abs/1608.03384"><font color = "#0000FF">arXiv</font></a>)<br>
 Oscar Hernan Madrid Padilla, James G. Scott, James Sharpnack, Ryan J. Tibshirani<br>
-In Submission, 2016
+Journal of Machine Learning Research (JMLR), 2018
 </div>
 
 <div class="pub">
