--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 	  (<a href="https://arxiv.org/abs/1802.06054">ArXiV preprint</a>, <a href="research/ITA2018detect.pdf">Presentation</a>)</li>
 	<li><b>Estimating Graphlet Statistics via Lifting</b>, <i>K. Paramonov, J. Sharpnack</i>, Jan. 2018,
 	  (<a href="https://arxiv.org/abs/1802.08736">ArXiV preprint</a>)</li>
+	<li><b>SQL-Rank: A Listwise Approach to Collaborative Ranking</b>, <i>L. Wu, C.J. Hsieh, J. Sharpnack</i>, Jan. 2018, (<a href="https://arxiv.org/abs/1803.00114">ArXiV preprint</a>)</li>
       </ol>
 
 <h3><a href="jsharpnaCV.pdf">My CV</a></h3>
