--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">UC Davis Sharpnack Lab</h1>
-      <h2 class="project-tagline">James Sharpnack <br>Mathematical Sciences Building 4107<br>jsharpna@ucdavis.edu</h2>
+      <h2 class="project-tagline">James Sharpnack <br>Mathematical Sciences Building 4107<br>
+	  Course email: prof.jsharpna@gmail.edu (use this if you are a student in a course that I'm teaching)<br>
+	  Davis email: jsharpna@ucdavis.edu (use this for all other business or research)</h2>
     </section>
 
     <section class="main-content">
@@ -40,7 +42,8 @@
 	  (<a href="https://arxiv.org/abs/1802.06054">ArXiV preprint</a>, <a href="research/ITA2018detect.pdf">Presentation</a>)</li>
 	<li><b>Estimating Graphlet Statistics via Lifting</b>, <i>K. Paramonov, J. Sharpnack</i>, Jan. 2018,
 	  (<a href="https://arxiv.org/abs/1802.08736">ArXiV preprint</a>)</li>
-	<li><b>SQL-Rank: A Listwise Approach to Collaborative Ranking</b>, <i>L. Wu, C.J. Hsieh, J. Sharpnack</i>, Jan. 2018, (<a href="https://arxiv.org/abs/1803.00114">ArXiV preprint</a>)</li>
+	<li><b>SQL-Rank: A Listwise Approach to Collaborative Ranking</b>, <i>L. Wu, C.J. Hsieh, J. Sharpnack</i>, Jan. 2018, 
+	(<a href="https://arxiv.org/abs/1803.00114">ArXiV preprint</a>)</li>
       </ol>
 
 <h3><a href="jsharpnaCV.pdf">My CV</a></h3>
