--- a/index.html
+++ b/index.html
@@ -21,8 +21,6 @@
     <section class="page-header">
       <h1 class="project-name">UC Davis Sharpnack Lab</h1>
       <h2 class="project-tagline">James Sharpnack <br>Mathematical Sciences Building 4107<br>
-	  Course email: prof.jsharpna@gmail.edu (use this if you are a student in a course that I'm teaching)<br>
-	  Davis email: jsharpna@ucdavis.edu (use this for all other business or research)</h2>
     </section>
 
     <section class="main-content">
@@ -36,6 +34,12 @@
 	</div>
       </div>
 
+	  <h3>Email:</h3>
+	  <ul>
+	  <li>Course email: prof.jsharpna@gmail.edu (use this if you are a student in a course that I'm teaching)</li>
+	  <li>Davis email: jsharpna@ucdavis.edu (use this for all other business or research)</li>
+	  </ul>
+	  
       <h3>Recent Papers and Presentations</h3>
       <ol>
 	<li><b>Learning Patterns for Detection with Multiscale Scan Statistics</b>, <i>J. Sharpnack</i>, Jan. 2018,
