--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 	  <h3>Email:</h3>
 	  <ul>
-	  <li>Course email: prof.jsharpna@gmail.edu (use this if you are a student in a course that I'm teaching)</li>
+	  <li>Course email: prof.jsharpna@gmail.com (use this if you are a student in a course that I'm teaching)</li>
 	  <li>Davis email: jsharpna@ucdavis.edu (use this for all other business or research)</li>
 	  </ul>
 	  
