--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
 	  
       <h3>Recent Papers and Presentations</h3>
       <ol>
+	<li><b>Fused Density Estimation: Theory and Methods</b>, <i>R. Bassett, J. Sharpnack</i>, May. 2018,
+	  (<a href="https://arxiv.org/pdf/1805.03288.pdf">ArXiV preprint</a></li>
 	<li><b>Learning Patterns for Detection with Multiscale Scan Statistics</b>, <i>J. Sharpnack</i>, Jan. 2018,
 	  (<a href="https://arxiv.org/abs/1802.06054">ArXiV preprint</a>, <a href="research/ITA2018detect.pdf">Presentation</a>)</li>
 	<li><b>Estimating Graphlet Statistics via Lifting</b>, <i>K. Paramonov, J. Sharpnack</i>, Jan. 2018,
