--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
 	  <li>Course email: prof.jsharpna@gmail.com (use this if you are a student in a course that I'm teaching)</li>
 	  <li>Davis email: jsharpna@ucdavis.edu (use this for all other business or research)</li>
 	  </ul>
-	  
-      <h3>Recent Papers and Presentations</h3>
+
+<h3>Recent Papers and Presentations</h3>
       <ol>
 	<li><b>Distributed Cartesian Power Graph Segmentation for Graphon Estimation</b>, <i>S. Wei, O.H. Madrid-Padilla, J. Sharpnack</i>, May. 2018,
-	  (<a href="https://arxiv.org/abs/1805.09978">ArXiV preprint</a></li>
+	  (<a href="https://arxiv.org/abs/1805.09978">ArXiV preprint)</a></li>
 	<li><b>Fused Density Estimation: Theory and Methods</b>, <i>R. Bassett, J. Sharpnack</i>, May. 2018,
-	  (<a href="https://arxiv.org/pdf/1805.03288.pdf">ArXiV preprint</a></li>
+	  (<a href="https://arxiv.org/pdf/1805.03288.pdf">ArXiV preprint</a>)</li>
 	<li><b>Learning Patterns for Detection with Multiscale Scan Statistics</b>, <i>J. Sharpnack</i>, Jan. 2018, accepted to COLT 2018,
 	  (<a href="https://arxiv.org/abs/1802.06054">ArXiV preprint</a>, <a href="research/ITA2018detect.pdf">Presentation</a>)</li>
 	<li><b>Estimating Graphlet Statistics via Lifting</b>, <i>K. Paramonov, J. Sharpnack</i>, Jan. 2018,
@@ -58,17 +58,22 @@
       
 <h3>Teaching</h3>
 <ol>
-  <li><a href="https://docs.google.com/document/d/15snbrjlwUYmwj4voSA_33qqtMxHrYXKlhnElGK1dPC0/edit?usp=sharing">Stats 290</a>: Statistics Seminar Series</li>
   <li><a href="141B/index.html">Stats 141B</a>: Data & Web Technologies for Data Analysis</li>
   <li><a href="https://github.com/jsharpna/DavisSML/">Stats 208</a>: Statistical Machine Learning</li>
 </ol>
 
 <h3>Students</h3>
 <ol>
-  <li>Liwei Wu, PhD Student</li>
-  <li>Xiaoyue Li, PhD Student</li>
-  <li>Shitong Wei, PhD Student</li>
-  <li>Andrew Chin, Undergraduate Student</li>
+  <li>Liwei Wu, Stats PhD Student (Co-advised)</li>
+  <li>Xiaoyue Li, Stats PhD Student (Advised)</li>
+  <li>Shitong Wei, Stats PhD Student (Advised)</li>
+  <li>Andrew Chin, Stats MS Student (Research assistant)</li>
+</ol>
+
+<h3>Former Students</h3>
+<ol> 
+ <li>Robert Bassett, Applied Math PhD (Committee/collaborator) - Assistant Professor at Naval Postgraduate School</li>
+  <li>Kirill Paramonov, Applied Math PhD (Committee/collaborator) - Alphabet/Youtube data scientist</li>
 </ol>
 
 <h3>Professional Membership</h3>
@@ -116,10 +121,18 @@
 </div>
 </div>
 
-<h3>Resources</h3>
+<h3>News 2018</h3>
 
+<ol>
+  <li><em>Mar:</em> My paper <b>Learning Patterns for Detection with Multiscale Scan Statistics</b>, <i>J. Sharpnack</i>, Jan. 2018, has been accepted to COLT 2018 (Conference on Learning Theory), and I will be presenting this research in Stockholm; I presented this work at ITA 2018 (Information Theory and Applications).</li>
+  <li><em>Apr:</em> Our paper <b>SQL-Rank: A Listwise Approach to Collaborative Ranking</b>, <i>L. Wu, C.J. Hsieh, J. Sharpnack</i>, was accepted to ICML 2018 (International conference on Machine Learning), Liwei will be giving a poster presentation and a short advert in Stockholm.</li>
+  <li><em>Apr:</em> Robert Bassett has accepted a tenure track position at the Naval Postgraduate School in Monterey, CA.  Robert has been working with me on fused density estimation and I am one of his committee members.  Congrats Robert!</li>
+  <li><em>May:</em> Kirill Paramonov has accepted a data scientist job with Youtube in San Bruno, CA.  Kirill and I have been working on graph analytics problems such as graphlet sampling.  Congrats Kirill!</li>
+  <li><em>June:</em> Liwei Wu is doing an internship with Facebook this summer; Xiaoyue Li is doing internships with JD.com and Google.</li>
+</ol>
+  
+<!--
 <h3>DSI Workshop on Classification: <a href="https://github.com/jsharpna/DavisSML/tree/master/lectures/classify">Github Repo</a></h3>
-
 <ol>
   <li>Starting your data science portfolio: <a href="141B/workflow.html">your workflow</a>, <a href="141B/git_instructions.html">git and GitHub</a></li>
   <li>Massive list of <a href="https://github.com/caesar0301/awesome-public-datasets">public datasets</a></li>
@@ -128,7 +141,7 @@
   <li><a href="http://reu.dimacs.rutgers.edu/Symbols.pdf">LaTeX symbol cheatsheet</a></li>
   <li><a href=""></a>
 </ol>
-  
+-->  
 
 
       <footer class="site-footer">
