--- a/index.html
+++ b/index.html
@@ -67,13 +67,16 @@
   <li>Liwei Wu, Stats PhD Student (Co-advised)</li>
   <li>Xiaoyue Li, Stats PhD Student (Advised)</li>
   <li>Shitong Wei, Stats PhD Student (Advised)</li>
-  <li>Andrew Chin, Stats MS Student (Research assistant)</li>
+  <li>Qin Ding, Stats PhD Student (Co-advised)</li>
+  <li>Lifeng Wei, Stats PhD Student (Co-advised)</li>
+  <li>Dmitry Shemetov, Applied Math PhD Student (Advised)</li>
 </ol>
 
 <h3>Former Students</h3>
 <ol> 
  <li>Robert Bassett, Applied Math PhD (Committee/collaborator) - Assistant Professor at Naval Postgraduate School</li>
-  <li>Kirill Paramonov, Applied Math PhD (Committee/collaborator) - Alphabet/Youtube data scientist</li>
+ <li>Kirill Paramonov, Applied Math PhD (Committee/collaborator) - Alphabet/Youtube data scientist</li>
+ <li>Andrew Chin, Stats MS Student (Research assistant)</li>
 </ol>
 
 <h3>Professional Membership</h3>
