--- a/index.html
+++ b/index.html
@@ -127,6 +127,7 @@
 <h3>News 2018</h3>
 
 <ol>
+  <li><em>June:</em> Michael's paper <b>Proteogenomics of surgically resected lung adenocarcinoma</b> (I am on of many co-authors) has been accepted to the Journal of Thoracic Oncology, congrats!</li>
   <li><em>Mar:</em> My paper <b>Learning Patterns for Detection with Multiscale Scan Statistics</b>, <i>J. Sharpnack</i>, Jan. 2018, has been accepted to COLT 2018 (Conference on Learning Theory), and I will be presenting this research in Stockholm; I presented this work at ITA 2018 (Information Theory and Applications).</li>
   <li><em>Apr:</em> Our paper <b>SQL-Rank: A Listwise Approach to Collaborative Ranking</b>, <i>L. Wu, C.J. Hsieh, J. Sharpnack</i>, was accepted to ICML 2018 (International conference on Machine Learning), Liwei will be giving a poster presentation and a short advert in Stockholm.</li>
   <li><em>Apr:</em> Robert Bassett has accepted a tenure track position at the Naval Postgraduate School in Monterey, CA.  Robert has been working with me on fused density estimation and I am one of his committee members.  Congrats Robert!</li>
