--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
 	  </ul>
 
 <h3>Recent Papers and Presentations</h3>
-      <ol>
+<ol>
+	<li><b>Adaptive Non-Parametric Regression With the K-NN Fused Lasso</b>, <i>Oscar Hernan Madrid Padilla, James Sharpnack, Yanzhen Chen, Daniela M. Witten</i>, July 2018, (<a href="https://arxiv.org/abs/1807.11641">ArXiV preprint</a>)</li>
 	<li><b>Distributed Cartesian Power Graph Segmentation for Graphon Estimation</b>, <i>S. Wei, O.H. Madrid-Padilla, J. Sharpnack</i>, May. 2018,
 	  (<a href="https://arxiv.org/abs/1805.09978">ArXiV preprint)</a></li>
 	<li><b>Fused Density Estimation: Theory and Methods</b>, <i>R. Bassett, J. Sharpnack</i>, May. 2018,
